--- a/express-discorder/package.json
+++ b/express-discorder/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "webhook-sample-app",
+  "name": "express-discorder",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+ "start": "node server.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
