--- a/express-discorder/package.json
+++ b/express-discorder/package.json
@@ -2,7 +2,7 @@
   "name": "express-discorder",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.mjs",
   "scripts": {
  "start": "node server.mjs"
   },
